Fix overflow issues on mobile.

--- a/src/assets/css/global/pages.css
+++ b/src/assets/css/global/pages.css
@@ -36,6 +36,7 @@ h1.Page-title {
 .wf-main {
 	position: relative;
 	z-index: 100;
+	overflow-x: hidden;
 }
 
 /* Board */
