--- a/src/assets/css/modules/footer.css
+++ b/src/assets/css/modules/footer.css
@@ -1,5 +1,6 @@
 .wf-footer {
 	background: #fbfaf4d9;
+	overflow-x: hidden;
 }
 
 .wf-footer a {
