--- a/src/assets/css/modules/header.css
+++ b/src/assets/css/modules/header.css
@@ -154,7 +154,7 @@
 }
 
 .wf-header-dropdown {
-	display: none;
+	display: block;
 	background: #fff;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	min-width: 270px;	
@@ -162,6 +162,7 @@
 
 @media screen and (min-width: 768px) {
 	.wf-header-dropdown {
+		display: none;
 		position: absolute;
 		top: 50px;
 		left: 0;
